--- a/style.css
+++ b/style.css
@@ -10487,13 +10487,17 @@ textarea {
 .offcanvas-backdrop.offcanvas-backdrop {
   display: none; }
 
-.form-style-1 label > span {
-  display: block;
-  text-align: left; }
-  .form-style-1 label > span .required {
-    color: #e53f1e; }
-.form-style-1 label input, .form-style-1 label textarea {
+.form-style-1 label {
   width: 100%; }
+  .form-style-1 label > span {
+    display: block;
+    text-align: left; }
+    .form-style-1 label > span .required {
+      color: #e53f1e; }
+  .form-style-1 label input, .form-style-1 label textarea {
+    width: 100%; }
+.form-style-1 .wpcf7-form-control-wrap {
+  margin-top: 14px; }
 
 @font-face {
   font-family: "Outfit";
