--- a/style.css
+++ b/style.css
@@ -10436,17 +10436,6 @@ textarea {
     .fieldset-cf7mls-wrapper.fieldset-cf7mls-wrapper .cf7mls-btns .cf7mls_next:hover, .fieldset-cf7mls-wrapper.fieldset-cf7mls-wrapper .cf7mls-btns .cf7mls_next:active, .fieldset-cf7mls-wrapper.fieldset-cf7mls-wrapper .cf7mls-btns .cf7mls_next.nice-select.open, .fieldset-cf7mls-wrapper.fieldset-cf7mls-wrapper .cf7mls-btns .cf7mls_next:focus {
       background-color: var(--white-color) !important;
       color: var(--secondary-color) !important; }
-.fieldset-cf7mls-wrapper.fieldset-cf7mls-wrapper .wpcf7-acceptance .wpcf7-list-item {
-  margin: 0; }
-.fieldset-cf7mls-wrapper.fieldset-cf7mls-wrapper .wpcf7-acceptance label {
-  flex-direction: row;
-  align-items: flex-start;
-  font-weight: 300;
-  color: #949aa1; }
-  .fieldset-cf7mls-wrapper.fieldset-cf7mls-wrapper .wpcf7-acceptance label input {
-    width: 20px;
-    margin-top: 4px;
-    margin-right: 10px; }
 
 .form-section h2 {
   margin-bottom: 1rem; }
@@ -10501,6 +10490,23 @@ textarea {
     height: 105px; }
 .form-style-1 .wpcf7-form-control-wrap {
   margin-top: 14px; }
+
+.wpcf7-acceptance.wpcf7-acceptance.wpcf7-acceptance {
+  max-width: 400px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto; }
+  .wpcf7-acceptance.wpcf7-acceptance.wpcf7-acceptance .wpcf7-list-item {
+    margin: 0; }
+  .wpcf7-acceptance.wpcf7-acceptance.wpcf7-acceptance label {
+    flex-direction: row;
+    align-items: flex-start;
+    font-weight: 300;
+    color: #949aa1; }
+    .wpcf7-acceptance.wpcf7-acceptance.wpcf7-acceptance label input {
+      width: 20px;
+      margin-top: 4px;
+      margin-right: 10px; }
 
 @font-face {
   font-family: "Outfit";
