--- a/style.css
+++ b/style.css
@@ -9873,54 +9873,6 @@ p:last-child {
 a {
   text-decoration: none; }
 
-.wpcf7-submit.wpcf7-submit.wpcf7-submit {
-  display: -webkit-inline-flex;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-transition: 300ms;
-  -moz-transition: 300ms;
-  -ms-transition: 300ms;
-  -o-transition: 300ms;
-  transition: 300ms;
-  border-radius: 5px;
-  font-weight: 500;
-  text-decoration: none;
-  color: inherit;
-  background-color: transparent;
-  text-align: center;
-  position: relative;
-  background-color: var(--accent-color);
-  color: var(--white-color); }
-  .wpcf7-submit.wpcf7-submit.wpcf7-submit span {
-    position: relative;
-    z-index: 1; }
-    .wpcf7-submit.wpcf7-submit.wpcf7-submit span:not(:last-child) {
-      margin-right: 0.75rem; }
-    .wpcf7-submit.wpcf7-submit.wpcf7-submit span.icon {
-      margin-top: -3px; }
-  .wpcf7-submit.wpcf7-submit.wpcf7-submit:not(.nav-link) {
-    border: 2px solid transparent;
-    padding: 10px 1.5rem; }
-  .wpcf7-submit.wpcf7-submit.wpcf7-submit.nav-link {
-    padding: 10px 1.5rem;
-    border: 1px solid transparent; }
-  @media screen and (min-width: 992px) {
-    .wpcf7-submit.wpcf7-submit.wpcf7-submit {
-      white-space: nowrap; } }
-  @media screen and (max-width: 767px) {
-    .wpcf7-submit.wpcf7-submit.wpcf7-submit {
-      padding: 1rem 1.5rem; } }
-  .wpcf7-submit.wpcf7-submit.wpcf7-submit:hover, .wpcf7-submit.wpcf7-submit.wpcf7-submit:active, .wpcf7-submit.wpcf7-submit.wpcf7-submit.nice-select.open, .wpcf7-submit.wpcf7-submit.wpcf7-submit:focus {
-    background-color: var(--secondary-color); }
-
 .button-box.button-box > a, .button-box.button-box > span:not(.wpcf7-spinner), .button-box.button-box > button, .button-box.button-box > input[type='submit'] {
   display: -webkit-inline-flex;
   display: -ms-inline-flexbox;
@@ -10492,7 +10444,7 @@ textarea {
   margin-top: 14px; }
 
 .wpcf7-acceptance.wpcf7-acceptance.wpcf7-acceptance {
-  max-width: 400px;
+  max-width: 358px;
   display: block;
   margin-left: auto;
   margin-right: auto; }
@@ -10510,6 +10462,54 @@ textarea {
       width: 20px;
       margin-top: 4px;
       margin-right: 10px; }
+
+.wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit {
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-transition: 300ms;
+  -moz-transition: 300ms;
+  -ms-transition: 300ms;
+  -o-transition: 300ms;
+  transition: 300ms;
+  border-radius: 5px;
+  font-weight: 500;
+  text-decoration: none;
+  color: inherit;
+  background-color: transparent;
+  text-align: center;
+  position: relative;
+  background-color: var(--accent-color);
+  color: var(--white-color); }
+  .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit span {
+    position: relative;
+    z-index: 1; }
+    .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit span:not(:last-child) {
+      margin-right: 0.75rem; }
+    .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit span.icon {
+      margin-top: -3px; }
+  .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit:not(.nav-link) {
+    border: 2px solid transparent;
+    padding: 10px 1.5rem; }
+  .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit.nav-link {
+    padding: 10px 1.5rem;
+    border: 1px solid transparent; }
+  @media screen and (min-width: 992px) {
+    .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit {
+      white-space: nowrap; } }
+  @media screen and (max-width: 767px) {
+    .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit {
+      padding: 1rem 1.5rem; } }
+  .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit:hover, .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit:active, .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit.nice-select.open, .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit:focus {
+    background-color: var(--secondary-color); }
 
 @font-face {
   font-family: "Outfit";
