--- a/assets/stylesheets/sections/_footer.scss
+++ b/assets/stylesheets/sections/_footer.scss
@@ -82,7 +82,7 @@ section.footer-navigation {
 		}
 	}
 	.underline {
-		border-bottom: 2px solid var(--secondary-color);
+		border-bottom: 2px solid var(--accent-color);
 	}
 	.wpcf7 {
 		input {
