--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -396,6 +396,7 @@ textarea {
 
 .mySwiper-Testimonial {
     .swiper-slide {
+        height: auto !important;
         .swiper-holder {
             padding: 1.5rem 1.5rem 2.5rem 1.5rem;
             border-radius: 5px;
