--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -1,6 +1,9 @@
 //-----------------------------------------------------------------------------
 // This file contains very basic styles.
-// -----------------------------------------------------------------------------
+// -----------------------------------------------------------------------------\
+:root {
+    scroll-behavior: initial;
+}
 html,
 body {
     position: relative;
