--- a/assets/stylesheets/base/_helpers.scss
+++ b/assets/stylesheets/base/_helpers.scss
@@ -255,6 +255,9 @@
 .light-color {
 	color: var(--light-color);
 }
+.white-color {
+	color: var(--white-color);
+}
 
 /*container*/
 .medium-container {
