--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -16,6 +16,7 @@ section.header-navigation {
 		@include responsive(xs-sm) {
 			padding-left: 20px;
 			padding-right: 20px;
+			margin-bottom: 20px;
 		}
 	}
 	.navbar {
@@ -42,8 +43,22 @@ section.header-navigation {
 								border: none;
 								padding-top: 20px;
 								padding-bottom: 20px;
-								border-top: 1px solid white;
 								border-bottom: 1px solid white;
+								text-align: left;
+								padding-left: 20px;
+								padding-right: 20px;
+								display: flex;
+								justify-content: space-between;
+								align-items: center;
+								&:after {
+									content: "";
+									width: 12px;
+									height: 12px;
+									border-top: 2px solid;
+									border-left: 2px solid;
+									display: inline-block;
+									transform: rotate(135deg);
+								}
 							}
 							@include on-event {
 								border-color: var(--primary-color);
