--- a/style.css
+++ b/style.css
@@ -10972,7 +10972,8 @@ section.header-navigation .button-box a svg {
 @media screen and (max-width: 991px) {
   section.header-navigation .button-box {
     padding-left: 20px;
-    padding-right: 20px; } }
+    padding-right: 20px;
+    margin-bottom: 20px; } }
 section.header-navigation .navbar .navbar-collapse ul.navbar-nav {
   font-size: 1.125rem; }
   @media screen and (min-width: 992px) {
@@ -10994,8 +10995,21 @@ section.header-navigation .navbar .navbar-collapse ul.navbar-nav {
         border: none;
         padding-top: 20px;
         padding-bottom: 20px;
-        border-top: 1px solid white;
-        border-bottom: 1px solid white; } }
+        border-bottom: 1px solid white;
+        text-align: left;
+        padding-left: 20px;
+        padding-right: 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center; }
+        section.header-navigation .navbar .navbar-collapse ul.navbar-nav li.menu-item:not(.button-box) a.nav-link:after {
+          content: "";
+          width: 12px;
+          height: 12px;
+          border-top: 2px solid;
+          border-left: 2px solid;
+          display: inline-block;
+          transform: rotate(135deg); } }
     section.header-navigation .navbar .navbar-collapse ul.navbar-nav li.menu-item:not(.button-box) a.nav-link:hover, section.header-navigation .navbar .navbar-collapse ul.navbar-nav li.menu-item:not(.button-box) a.nav-link:active, section.header-navigation .navbar .navbar-collapse ul.navbar-nav li.menu-item:not(.button-box) a.nav-link.nice-select.open, section.header-navigation .navbar .navbar-collapse ul.navbar-nav li.menu-item:not(.button-box) a.nav-link:focus {
       border-color: var(--primary-color); }
       @media screen and (max-width: 991px) {
