--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -63,7 +63,7 @@ section.header-navigation {
 							@include on-event {
 								border-color: var(--primary-color);
 								@include responsive(xs-sm) {
-									border-color: var(--white-color);
+									background-color: var(--accent-color);
 								}
 							}
 						}
