--- a/style.css
+++ b/style.css
@@ -10978,7 +10978,7 @@ section.header-navigation .navbar .navbar-collapse ul.navbar-nav {
   font-size: 1.125rem; }
   @media screen and (max-width: 991px) {
     section.header-navigation .navbar .navbar-collapse ul.navbar-nav {
-      margin-top: 20px; } }
+      padding-top: 20px; } }
   @media screen and (min-width: 992px) {
     section.header-navigation .navbar .navbar-collapse ul.navbar-nav li.menu-item:not(.button-box) {
       padding-left: 1rem;
@@ -11017,6 +11017,7 @@ section.header-navigation .navbar .navbar-collapse ul.navbar-nav {
       border-color: var(--primary-color); }
       @media screen and (max-width: 991px) {
         section.header-navigation .navbar .navbar-collapse ul.navbar-nav li.menu-item:not(.button-box) a.nav-link:hover, section.header-navigation .navbar .navbar-collapse ul.navbar-nav li.menu-item:not(.button-box) a.nav-link:active, section.header-navigation .navbar .navbar-collapse ul.navbar-nav li.menu-item:not(.button-box) a.nav-link.nice-select.open, section.header-navigation .navbar .navbar-collapse ul.navbar-nav li.menu-item:not(.button-box) a.nav-link:focus {
+          border-color: var(--white-color);
           background-color: var(--accent-color); } }
   @media screen and (min-width: 992px) {
     section.header-navigation .navbar .navbar-collapse ul.navbar-nav li.menu-item + .button-box {
