--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -24,7 +24,7 @@ section.header-navigation {
 			ul.navbar-nav {
 				font-size: 1.125rem;
 				@include responsive(xs-sm) {
-					margin-top: 20px;
+					padding-top: 20px;
 				}
 				li.menu-item {
 					&:not(.button-box) {
@@ -66,6 +66,7 @@ section.header-navigation {
 							@include on-event {
 								border-color: var(--primary-color);
 								@include responsive(xs-sm) {
+									border-color: var(--white-color);
 									background-color: var(--accent-color);
 								}
 							}
