--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -3,6 +3,10 @@ section.header-navigation {
 		@media (max-width: 1399px) {
 			max-width: 100%;
 		}
+		@include responsive(xs-sm) {
+			width: 100%;
+			min-height: 85px;
+		}
 	}
 	.button-box {
 		a {
