--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -25,10 +25,11 @@ body {
 }
 main {
     @include responsive(xs-sm) {
+        margin-top: 100px;
+    }
+    @include responsive(xs) {
         margin-top: 85px;
     }
-   
-   
 }
 section {
     position: relative;
