--- a/style.css
+++ b/style.css
@@ -11286,6 +11286,8 @@ section.footer-navigation {
   font-size: 20px; }
   #footerForm .offcanvas-body {
     overflow: visible; }
+  #footerForm .action-button {
+    display: none !important; }
   @media screen and (min-width: 992px) {
     #footerForm img {
       margin-top: -40px; } }
