--- a/assets/stylesheets/sections/_footer.scss
+++ b/assets/stylesheets/sections/_footer.scss
@@ -51,7 +51,7 @@ section.footer-navigation {
 		overflow: visible;
 
 	}
-	.action-button {
+	.cf7mls_back {
 		display: none !important
 	}
 	img {
