--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -6,7 +6,7 @@ section.image-info-boxes {
 					font-size: 20px;
 				}
 			}
-		
+
 			@include not-last-child {
 				.column-holder {
 					position: relative;
@@ -132,8 +132,6 @@ section.page-banner {
 			}
 		}
 	}
-
-
 }
 
 section.thank-you {
@@ -500,7 +498,6 @@ section.contact-form {
 	.contact-form-box {
 		label {
 			width: 100%;
-
 		}
 		input {
 			width: 100%;
@@ -508,6 +505,20 @@ section.contact-form {
 		textarea {
 			width: 100%;
 			height: 100px;
+		}
+	}
+}
+
+.text-section {
+	.description-box {
+		line-height: 1.6;
+		ul,
+		ol {
+			li {
+				@include not-last-child {
+					margin-bottom: 1rem;
+				}
+			}
 		}
 	}
 }
