--- a/style.css
+++ b/style.css
@@ -11717,4 +11717,10 @@ section.contact-form {
     width: 100%;
     height: 100px; }
 
+.text-section .description-box {
+  line-height: 1.6; }
+  .text-section .description-box ul li:not(:last-child),
+  .text-section .description-box ol li:not(:last-child) {
+    margin-bottom: 1rem; }
+
 /*# sourceMappingURL=style.css.map */
