--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -31,6 +31,9 @@ main {
         margin-top: 85px;
     }
 }
+.page-components {
+    overflow: hidden;
+}
 section {
     position: relative;
     overflow: hidden;
