--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -140,14 +140,15 @@ a {
 input:not([type="submit"]):not(.qty):not([type="checkbox"]):not([type="radio"]):not(.search),
 select,
 textarea {
-    border-radius: 5px;
-    border: 2px solid var(--primary-color);
-    outline: none;
-    padding: 13px;
-    line-height: 1;
-    font-size: 1rem;
+    border-radius: 5px !important;
+    border: 2px solid var(--primary-color)!important;
+    outline: none !important;
+    padding: 13px !important;
+    line-height: 1 !important;
+    font-size: 1rem !important;
     &::placeholder {
-        color: #c6c9ce;
+        color: #c6c9ce !important;
+        font-size: 16px !important;
     }
 }
 
@@ -758,4 +759,8 @@ textarea {
         opacity: 1 !important;
         visibility: visible;
     }
+}
+
+.fsForm {
+    font-family: var(--primary-font);
 }
