--- a/style.css
+++ b/style.css
@@ -9982,16 +9982,17 @@ a {
 input:not([type="submit"]):not(.qty):not([type="checkbox"]):not([type="radio"]):not(.search),
 select,
 textarea {
-  border-radius: 5px;
-  border: 2px solid var(--primary-color);
-  outline: none;
-  padding: 13px;
-  line-height: 1;
-  font-size: 1rem; }
+  border-radius: 5px !important;
+  border: 2px solid var(--primary-color) !important;
+  outline: none !important;
+  padding: 13px !important;
+  line-height: 1 !important;
+  font-size: 1rem !important; }
   input:not([type="submit"]):not(.qty):not([type="checkbox"]):not([type="radio"]):not(.search)::placeholder,
   select::placeholder,
   textarea::placeholder {
-    color: #c6c9ce; }
+    color: #c6c9ce !important;
+    font-size: 16px !important; }
 
 @media screen and (max-width: 600px) {
   #wpadminbar {
@@ -10527,6 +10528,9 @@ textarea {
     transform: none !important;
     opacity: 1 !important;
     visibility: visible; } }
+
+.fsForm {
+  font-family: var(--primary-font); }
 
 @font-face {
   font-family: "Outfit";
