--- a/style.css
+++ b/style.css
@@ -10446,11 +10446,11 @@ textarea {
       text-align: left; }
       .form-style-1 .row [class*="col"] > label > span .required {
         color: #e53f1e; }
-    .form-style-1 .row [class*="col"] > label input,
-    .form-style-1 .row [class*="col"] > label textarea {
-      width: 100%; }
-    .form-style-1 .row [class*="col"] > label textarea {
-      height: 105px; }
+  .form-style-1 .row input,
+  .form-style-1 .row textarea {
+    width: 100%; }
+  .form-style-1 .row textarea {
+    height: 105px; }
   .form-style-1 .wpcf7-form-control-wrap {
     margin-top: 14px; }
 
