--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -690,7 +690,7 @@ textarea {
 .offcanvas-backdrop.offcanvas-backdrop {
     display: none;
 }
-.form-style-1 {
+.form-style-1, .fsForm {
     font-size: 16px;
 
     .row {
